--- a/RethinkDB.Demo.App/styles/base.css
+++ b/RethinkDB.Demo.App/styles/base.css
@@ -1,62 +1,27 @@
+html {
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
-  background: #fff;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 15px;
-  line-height: 1.7;
-  margin: 0;
-  padding: 30px;
+  font-size: 13px;
+  line-height: 20px;
 }
 
-a {
-  color: #4183c4;
-  text-decoration: none;
+.messageList {
+    margin: 15px;
 }
 
-a:hover {
-  text-decoration: underline;
+.nameTextBox {
+    width: 15%
+    margin-right: 15px
 }
 
-code {
-  background-color: #f8f8f8;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  font-family: "Bitstream Vera Sans Mono", Consolas, Courier, monospace;
-  font-size: 12px;
-  margin: 0 2px;
-  padding: 0px 5px;
+.messageTextBox {
+    width: 75%
+    margin-right: 15px
 }
 
-h1, h2, h3, h4 {
-  font-weight: bold;
-  margin: 0 0 15px;
-  padding: 0;
-}
-
-h1 {
-  border-bottom: 1px solid #ddd;
-  font-size: 2.5em;
-  font-weight: bold;
-  margin: 0 0 15px;
-  padding: 0;
-}
-
-h2 {
-  border-bottom: 1px solid #eee;
-  font-size: 2em;
-}
-
-h3 {
-  font-size: 1.5em;
-}
-
-h4 {
-  font-size: 1.2em;
-}
-
-p, ul {
-  margin: 15px 0;
-}
-
-ul {
-  padding-left: 30px;
+.sayButton {
+    width: 10%
+    flaot: right;
 }
