--- a/RethinkDB.Demo.App/styles/base.css
+++ b/RethinkDB.Demo.App/styles/base.css
@@ -12,16 +12,14 @@ body {
 }
 
 .nameTextBox {
-    width: 15%
-    margin-right: 15px
+    margin-right: 15px;
 }
 
 .messageTextBox {
-    width: 75%
-    margin-right: 15px
+    width: 70% !important;
+    margin-right: 15px;
 }
 
 .sayButton {
-    width: 10%
     flaot: right;
 }
